# zero2prod-rust

./: .dockerignore  Cargo.toml  Dockerfile  spec.yml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
.sqlx/: query-e1b957001647274f757edca55504540362d6bef57dc8ba03b46736f04f661e7a.json
migrations/: 20240617221632_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
