[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.7.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.14.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "0.12.4"
